--- a/src/styles/Entertodo.css
+++ b/src/styles/Entertodo.css
@@ -1,7 +1,6 @@
 .enter-todo{
     width:1000px;
     height:500px;
-    background-color: aliceblue;
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -29,7 +28,7 @@ h1{
     font-size: 1.5rem;
     text-transform:uppercase;
     font-weight: 800;
-    color:red;
+    
 }
 
 
@@ -65,4 +64,9 @@ h1{
 .task-priority label{
     display:flex;
     column-gap: 5px;
+}
+
+.enter-todo button{
+    width:200px;
+    height:25px;
 }
